# osm2xodr

./: .gitignore  CMakeLists.txt  CMakePresets.json  PAPER.md  README.md  vcpkg.json
.github/workflows/: c-cpp.yml
cmake/: FindOsmium.cmake
examples/: 3way-tram.xodr  4way-crossing.xodr  Testfeld_Karlsruhe.xodr  config.yaml  digitaf.xodr  durlacher-tor.osm  durlacher-tor.xodr  intersection.xodr  karl-wilhelm.osm  karl-wilhelm.xodr  lane_change.osm  osm2xodr  scheck-in.osm  scheck-in.xodr  tiny_intersection.osm
include/osm2xodr/: cli.hpp  config.hpp  geo.hpp  infer.hpp  model.hpp  model_builder.hpp  options.hpp  osm_parse.hpp  report.hpp  tags.hpp  util.hpp  xodr_writer.hpp
src/: cli.cpp  config.cpp  infer.cpp  main.cpp  model_builder.cpp  osm_parse.cpp  report.cpp  xodr_writer.cpp
src/gui/: gui_app.cpp  gui_app.hpp  lgl_imagery.cpp  lgl_imagery.hpp  main.cpp  road_geometry.cpp  road_geometry.hpp
test/: benchmark_manifest.json  check_junction_continuity.py  check_merge_turn_lane_consistency.py  check_road_geometry_continuity.py  check_road_link_continuity.py  check_turn_lane_routing.py  compare_geojson.py  export_geojson.py  fetch_lgl_imagery.py  overlay_on_imagery.py  run_benchmark.py  xodr_viewer.py
